--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,17 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name URL;
+    server_name energy-lab.propulsion-learn.ch;
     return 301 https://$server_name$request_uri;
 }
 
 
 server {
     listen 443 ssl;
-    server_name URL;
+    server_name energy-lab.propulsion-learn.ch;
 
-    ssl_certificate /etc/letsencrypt/live/URL/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/URL/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/energy-lab.propulsion-learn.ch/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/energy-lab.propulsion-learn.ch/privkey.pem;
 
     location /static-files {
         alias   /static-files/;
