--- a/envs/dev.env
+++ b/envs/dev.env
@@ -8,10 +8,10 @@ POSTGRES_DB=postgres
 DJANGO_DEBUG=True
 
 #email setup for sending verification codes
-DEFAULT_FROM_EMAIL=
+DEFAULT_FROM_EMAIL= energylab.auth@gmail.com
 EMAIL_USE_TLS=True
 EMAIL_HOST=smtp.gmail.com
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
+EMAIL_HOST_USER= strongpassword
+EMAIL_HOST_PASSWORD= strongpassword
 EMAIL_PORT=587
 
