--- a/envs/prod.env
+++ b/envs/prod.env
@@ -11,6 +11,6 @@ DJANGO_DEBUG=False
 DEFAULT_FROM_EMAIL= energylab.auth@gmail.com
 EMAIL_USE_TLS=True
 EMAIL_HOST=smtp.gmail.com
-EMAIL_HOST_USER= strongpassword
+EMAIL_HOST_USER= energylab.auth@gmail.com
 EMAIL_HOST_PASSWORD= strongpassword
 EMAIL_PORT=587
