--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@nivo/pie": "^0.72.0"
   }
 }
