--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-to-pdf": "^0.0.14",
     "recharts": "^2.0.9",
     "redux": "^4.1.0",
     "redux-devtools": "^3.7.0",
