--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@nivo/calendar": "^0.72.0",
     "@nivo/core": "^0.72.0",
     "@nivo/line": "^0.72.0",
+    "@react-pdf/renderer": "^2.0.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
