--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/calendar": "^0.72.0",
+    "@nivo/core": "^0.72.0",
+    "@nivo/line": "^0.72.0",
+    "@react-pdf/renderer": "^2.0.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,6 +21,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-to-pdf": "^0.0.14",
     "recharts": "^2.0.9",
     "redux": "^4.1.0",
     "redux-devtools": "^3.7.0",
@@ -48,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@nivo/pie": "^0.72.0"
   }
 }
